--- a/src/app/index.css
+++ b/src/app/index.css
@@ -95,6 +95,16 @@
     position: relative;
 }
 
+.pricing {
+    background: url("../assets/images/handball/Back01.jpg");
+    max-height: 100vh;
+    width: 100%;
+    height: 400px;
+    padding: 5vh 10vw 10vh 10vw;
+    text-align: center;
+    position: relative;
+}
+
 .landing-part-two {
     text-align: center;
     position: relative;
