--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -1,6 +1,6 @@
 <!-- START PRICING TABLE CONTAINER -->
 <div class="light-primary-color">
-    <div class="row default-primary-color landing" style="margin-bottom:0px;">
+    <div class="row default-primary-color pricing" style="margin-bottom:0px;">
         <div class="col s12  center-align">
             <h2 class="title" translate="pricing.title"></h2>
             <h5 class="title hide-on-small-only" translate="pricing.desc"></h5>
@@ -85,7 +85,8 @@
     </div>
 
     <div class="row  default-primary-color" style="margin-bottom:0px;">
-        <div class="center-align">
+        <div class="col s12 center-align"> 
+            <div class="row">&nbsp;</div>
             <div class="row">
                 <div class="col m6 s12 right-align">
                     <h5 translate="pricing.trial.title"></h5>
