--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1082,6 +1082,9 @@ table.super-fancy tr.foobar {
 .aboutUs .card-content {
     min-height: 170px
 }
+.aboutUs .card-reveal {
+    text-align: center;
+}
 
 .aboutUs .card {
     border-radius: 8px;
