--- a/src/app/components/directives/stats/hand/goals.html
+++ b/src/app/components/directives/stats/hand/goals.html
@@ -1,13 +1,13 @@
-<div class="card white-text" ng-if="bindToId==='goalScored'">
+<div class="card primary-text-color" ng-if="bindToId==='goalScored'">
     <div class="card-title dark-primary-color center">
-        <span class="white-text title"><small>{{'stats.resumeTab.goalScored' | translate }}</small></span>
+        <span class="title"><small>{{'stats.resumeTab.goalScored' | translate }}</small></span>
     </div>
     <!-- 
     <div class="card-image waves-effect waves-block waves-light">
         <img src="/assets/images/handball/ballon-filet.jpeg">
     </div>
     -->
-    <div class="card-content white blue-grey-text primary-text-color">
+    <div class="card-content white primary-text-color">
         <div class="row center">
             <div class="col s4"><h6>{{'stats.resumeTab.goal' | translate }}</h6></div>
             <div class="col s4"><h6>{{'stats.resumeTab.goalAvgLight' | translate }}</h6></div>
@@ -20,9 +20,9 @@
     </div>
 </div>
 
-<div class="card white-text" ng-if="bindToId==='goalConceded'">
+<div class="card primary-text-color" ng-if="bindToId==='goalConceded'">
     <div class="card-title dark-primary-color center">
-        <span class="white-text title"><small>{{'stats.resumeTab.goalConceded' | translate }}</small></span>
+        <span class="title"><small>{{'stats.resumeTab.goalConceded' | translate }}</small></span>
     </div>
     <!--
     <div class="card-image waves-effect waves-block waves-light">
