--- a/src/app/components/directives/stats/hand/playerUse.html
+++ b/src/app/components/directives/stats/hand/playerUse.html
@@ -1,6 +1,6 @@
-<div class="card light-blue lighten-1 white-text">
-    <div class="card-title center colorMain">
-        <span class="white-text title"><small>{{'stats.resumeTab.usePlayer' | translate }}</small></span>
+<div class="card primary-text-color">
+    <div class="card-title center dark-primary-color">
+        <span class="title"><small>{{'stats.resumeTab.usePlayer' | translate }}</small></span>
     </div>
     <!--
     <div class="card-image waves-effect waves-block waves-light">
@@ -8,7 +8,7 @@
     </div>                        
     -->
     
-    <div class="card-content white blue-grey-text text-darken-2">
+    <div class="card-content white primary-text-color">
         <div class="row center">
             <div class="col s4 "><h6>{{'stats.resumeTab.gamePlayed' | translate }}</h6></div>
             <div class="col s4 "><h6>{{'stats.resumeTab.holder' | translate }}</h6></div>
