--- a/src/app/components/directives/stats/hand/radarChart.html
+++ b/src/app/components/directives/stats/hand/radarChart.html
@@ -2,7 +2,7 @@
     <div class="card-title dark-primary-color activator center">
         <small>{{title}}<i class="small material-icons right">more_vert</i></small>
     </div>
-    <div class="card-content white center-align">
+    <div class="card-content center-align">
         <div ng-if="loading">
             <div class="preloader-wrapper big active">
                 <div class="spinner-layer spinner-green-only">
