--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -8,9 +8,10 @@
 
         <div class="col s12">&nbsp;</div>
         <div class="col s12 landing-part-two">
+            <div class="row">&nbps;</div>
             <div class="row"> 
                 <div class="col l4 s12">
-                    <div class="card-title primary-text-color">
+                    <div class="card-title secondary-color">
                         <h3 translate="pricing.offers.standard.title"></h3>
                     </div>
                     <div class="card-content light-primary-color">
@@ -18,7 +19,7 @@
                             <h4>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h4>
                         </div>
 
-                        <a class="btn waves-effect waves-light accent-color"
+                        <a class="btn waves-effect waves-light secondary-color"
                            href="#/signupStart" translate="pricing.subscribe-btn">
                         </a>
 
@@ -30,11 +31,10 @@
                             <li translate="pricing.offers.standard.detail.line5"></li>
                         </ul>
                         
-                        <p>&nbsp;</p>
                     </div>
                 </div>
                 <div class="col l4 s12">
-                    <div class="card-title primary-text-color">
+                    <div class="card-title accent-color">
                         <h3 translate="pricing.offers.standard.title"></h3>
                     </div>
                     <div class="card-content light-primary-color">
@@ -53,11 +53,10 @@
                             <li translate="pricing.offers.standard.detail.line4"></li>
                             <li translate="pricing.offers.standard.detail.line5"></li>
                         </ul>
-                        <p>&nbsp;</p>
                     </div>
                 </div>
                 <div class="col l4 s12">
-                    <div class="card-title primary-text-color">
+                    <div class="card-title dark-primary-color">
                         <h3 translate="pricing.offers.standard.title"></h3>
                     </div>
                     <div class="card-content light-primary-color">
@@ -65,7 +64,7 @@
                             <h4>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h4>
                         </div>
 
-                        <a class="btn waves-effect waves-light accent-color"
+                        <a class="btn waves-effect waves-light dark-primary-color"
                            href="#/signupStart" translate="pricing.subscribe-btn">
                         </a>
 
@@ -76,7 +75,6 @@
                             <li translate="pricing.offers.standard.detail.line4"></li>
                             <li translate="pricing.offers.standard.detail.line5"></li>
                         </ul>
-                        <p>&nbsp;</p>
                     </div>
                 </div>
             </div>
