--- a/src/app/index.css
+++ b/src/app/index.css
@@ -37,13 +37,13 @@
 }
 
 .default-primary-color {
-    background: #78BE78;
+    background: #607d8b;
     color: #FFFFFF;
 }
 
 .light-primary-color {
-    background-color: rgba(242, 243, 242, 1) !important;
-    color: #646464 !important;
+    background: #eceff1 !important;
+    color: #37474F !important;
 }
 
 .accent-color {
@@ -52,36 +52,64 @@
 }
 
 .secondary-color {
-    background: rgba(120, 190, 120, 1) !important;
+    background: #78BE78 !important;
     color: #FFFFFF;
 }
 
 .primary-text-color {
-    color: rgba(69, 90, 100, 1);
+    color: #37474F;
 }
 
 .secondary-text-color {
-    color: #BDBDBD !important;;
+    color: #78BE78 !important;
 }
 
 .accent-text-color {
     color: #ea5350 !important;
 }
 
-.light-text-color         { 
-    color: #BDBDBD !important;
+.dark-text-color {
+    color: #37474F;
 }
-.divider-color { 
 
-    border-color: #BDBDBD !important;
+.light-text-color         { 
+    color: #90a4ae !important;
+}
+
+.divider-light         { 
+    color: #eceff1 !important;
 }
 
 /* Public site */
 
+.aboutUs .card-content {
+    min-height: 170px
+}
+
+.aboutUs .card {
+    border-radius: 8px;
+}
+
+.aboutUs .card-transluscent {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    margin: 25px;
+}
+
+.aboutUs-part-two {
+    text-align: left;
+    width: 80%;
+    position: relative;
+    box-sizing: border-box;
+    border-radius: 8px;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
+    padding: 3vh 7vw 3vh 7vw;
+    background: rgba(255, 255, 255, 0.1) !important;
+}
+
 .top-nav-trans {
     position: relative;
     z-index: 30;
-    background: #37474F;
     box-shadow: none;
 }
 
@@ -106,11 +134,11 @@
     position: relative;
 }
 
-.landing h2, .landing h4, .landing h5, .about-container h2 {
-    text-shadow: -1px -1px 3px rgba(0, 0, 0, 0.5),
-    1px -1px 3px rgba(0, 0, 0, 0.5),
-    -1px 1px 3px rgba(0, 0, 0, 0.5),
-    1px 1px 3px rgba(0, 0, 0, 0.5);
+.landing h2, .about-title h2 {
+    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.5),
+    1px -1px 1px rgba(0, 0, 0, 0.5),
+    -1px 1px 1px rgba(0, 0, 0, 0.5),
+    1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 .price h4 {
     text-shadow: none;
@@ -123,27 +151,30 @@
     border-radius: 8px;
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
     padding: 3vh 7vw 3vh 7vw;
-    width: 90vw;
     background-color: #ffffff;
 }
 
 .landing div {
-    margin-bottom: 20px;
+    margin-bottom: 10vh;
 }
 
-.aboutUs .about-bg {
+.landing-part-two div {
+    margin-bottom: 5vh;
+}
+
+.aboutUs {
     max-height: 100%;
     height: 100%;
     width: 100%;
     text-align: center;
-    background: url("../assets/images/backAbout.jpg") fixed;
+    background: url("../assets/images/handball/Back02.jpeg") fixed;
     background-size: cover;
-    position: fixed;
+    position: relative;
     top: 0;
     bottom: 0;
     margin: 0;
     padding: 0;
-    filter: grayscale(70%);
+
 }
 
 .aboutUs .about-container {
@@ -161,6 +192,12 @@
 .card {
     border-radius: 8px;
 }
+
+.card-content img {
+    filter: grayscale(100%);
+    border-radius: 12px !important;
+}
+
 
 .card .card-content, .card .card-title {
     border-radius: 8px 8px 0 0;
@@ -1063,46 +1100,4 @@ table.super-fancy tr.foobar {
 
 .cnil-main p {
     text-align: justify;
-}
-
-.card-image {
-    height: 200px;
-    filter: grayscale(100%);
-    border-top-left-radius: 12px !important;
-    border-top-right-radius: 12px !important;
-}
-
-.card-reveal img {
-    height: 150px;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    margin-left: auto;
-    margin-right: auto;
-    filter: grayscale(100%);
-}
-
-.card-reveal p {
-    text-align: left;
-}
-
-.close-card {
-    position: absolute;
-    right: 20px;
-    top: 20px;
-}
-
-.aboutUs .card-content {
-    min-height: 170px
-}
-.aboutUs .card-reveal {
-    text-align: center;
-}
-
-.aboutUs .card {
-    border-radius: 8px;
-}
-
-.aboutUs .card-transluscent {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 20px;
-    margin: 25px;
 }
