--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,80 +1,81 @@
 
-<div class="light-primary-color">    
-    <div class="row default-primary-color landing">
+<div class="default-primary-color">    
+    <div class="row landing">
         
-            <div class="col s12"><h2 translate="landing.main-title"></h2></div>
-            
-            <div class="col s12"> 
-                <a class="btn waves-effect waves-white accent-color" ng-click="openSignup()" translate="navbar.signup"></a>
-            </div>
-            
-            <div class="col s12 hide-on-med-and-down"><h2>&nbsp;</h2></div>
-        
-            <div class="col m4 s12 hide-on-med-and-down">
-                <i class="material-icons md-60 accent-text-color">camera_alt</i>
-                <h4 translate="landing.part-2.capture"></h4>
-            </div>
-            <div class="col m4 s12 hide-on-med-and-down">
-                <i class="material-icons md-60 accent-text-color">insert_chart</i>
-                <h4 translate="landing.part-2.analyze"></h4>
-            </div>
-            <div class="col m4 s12 hide-on-med-and-down">
-                <i class="material-icons md-60 accent-text-color">show_chart</i>
-                <h4 translate="landing.part-2.progress"></h4>
-            </div>
-    </div>
+        <div class="col s12"><h2 translate="landing.main-title"></h2></div>
+
+        <div class="col s12"> 
+            <a class="btn waves-effect waves-white secondary-color" ng-click="openSignup()" translate="navbar.signup"></a>
+        </div>
     
-    <div class="row landing-part-two">        
-        <div class="col s12 primary-text-color"><h3 translate="landing.part-2.title"></h3></div>
+        <div class="col m4 s12 hide-on-med-and-down">
+            <i class="material-icons md-60 accent-text-color">camera_alt</i>
+            <h4 translate="landing.part-2.capture"></h4>
+        </div>
+        <div class="col m4 s12 hide-on-med-and-down">
+            <i class="material-icons md-60 accent-text-color">insert_chart</i>
+            <h4 translate="landing.part-2.analyze"></h4>
+        </div>
+        <div class="col m4 s12 hide-on-med-and-down">
+            <i class="material-icons md-60 accent-text-color">show_chart</i>
+            <h4 translate="landing.part-2.progress"></h4>
+        </div>
+           
+        
+        <div class="col s12 landing-part-two light-primary-color">
+            <div class="row">    
+                <div class="col s12"><h3 translate="landing.part-2.title"></h3></div>
 
-            <div class="col s12 m6">
-                <div class="center">
-                    <div class="accent-text-color">
-                        <i class="large material-icons">store</i>
+                <div class="col s12 m6">
+                    <div class="center">
+                        <div class="accent-text-color">
+                            <i class="large material-icons">store</i>
+                        </div>
+                        <h5 translate="landing.area-3.item-2.title" class="title"></h5>
+
+                        <p class="light left-align container" translate="landing.area-3.item-2.content"></p>
                     </div>
-                    <h5 translate="landing.area-3.item-2.title" class="title"></h5>
+                </div>
 
-                    <p class="light left-align container" translate="landing.area-3.item-2.content"></p>
+                <div class="col s12 m6">
+                    <div class="center">
+                        <div class="heroPartOne">
+                            &nbsp;
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col s12 m6">
+                    <div class="center">
+                        <div class="accent-text-color">
+                            <i class="large material-icons">stay_current_landscape</i>
+                        </div>
+
+                        <h5 translate="landing.area-3.item-0.title" class="title"></h5>
+
+                        <p class="light left-align container" translate="landing.area-3.item-0.content"></p>
+                    </div>
+                </div>
+
+                <div class="col s12 m6">
+                    <div class="center">
+                        <div class="accent-text-color">
+                            <i class="large material-icons">loop</i>
+                        </div>
+                        <h5 translate="landing.area-3.item-3.title" class="title"></h5>
+
+                        <p class="light left-align container" translate="landing.area-3.item-3.content"></p>
+                    </div>
                 </div>
             </div>
-            
-            <div class="col s12 m6">
-                <div class="center">
-                    <div class="heroPartOne">
-                        &nbsp;
-                    </div>
-                </div>
-            </div>
-            
 
-            <div class="col s12 m6">
-                <div class="center">
-                    <div class="accent-text-color">
-                        <i class="large material-icons">stay_current_landscape</i>
-                    </div>
-
-                    <h5 translate="landing.area-3.item-0.title" class="title"></h5>
-
-                    <p class="light left-align container" translate="landing.area-3.item-0.content"></p>
-                </div>
-            </div>
-
-            <div class="col s12 m6">
-                <div class="center">
-                    <div class="accent-text-color">
-                        <i class="large material-icons">loop</i>
-                    </div>
-                    <h5 translate="landing.area-3.item-3.title" class="title"></h5>
-
-                    <p class="light left-align container" translate="landing.area-3.item-3.content"></p>
-                </div>
-            </div>
-
+        </div>
     </div>
     <div class="row">&nbsp;</div>
     
-    <div class="default-primary-color">
-        <div class="section white-text">
+    <div class="secondary-color">
+        <div class="section">
             <div class="row">&nbsp;</div>
 
             <h5 class="center-align" translate="landing.area-4.content"></h5>
