--- a/src/app/modules/commons/users/sandbox/sbMemberMgnt.html
+++ b/src/app/modules/commons/users/sandbox/sbMemberMgnt.html
@@ -4,7 +4,7 @@
     <div class="row hide-on-med-and-down"></div>
 
     <!-- Entete -->
-    <div class="row light-primary-color center valign-wrapper hide-on-med-and-down">
+    <div class="row dark-primary-color center valign-wrapper hide-on-med-and-down">
         <div class="col m1">
             <i class="material-icons md-48 accent-text-color ">group</i>
         </div>
