--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -22,7 +22,7 @@
         </div>
            
         
-        <div class="col s12 landing-part-two light-primary-color">
+        <div class="col s12 landing-part-two primary-text-color">
             <div class="row">    
                 <div class="col s12"><h3 translate="landing.part-2.title"></h3></div>
 
