--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -3,20 +3,20 @@
     <div class="row default-primary-color pricing" style="margin-bottom:0px;">
         <div class="col s12  center-align">
             <h2 class="title" translate="pricing.title"></h2>
-            <h5 class="title hide-on-small-only" translate="pricing.desc"></h5>
+            
         </div>
 
         <div class="col s12">&nbsp;</div>
         <div class="col s12 landing-part-two">
-            <div class="row">&nbps;</div>
-            <div class="row"> 
+            <div class="row">
+                <div class="col s12"><h5 class="title primary-text-color" translate="pricing.desc"></h5></div></div> 
                 <div class="col l4 s12">
                     <div class="card-title secondary-color">
-                        <h3 translate="pricing.offers.standard.title"></h3>
+                        <h4 translate="pricing.offers.standard.title"></h4>
                     </div>
                     <div class="card-content light-primary-color">
                         <div class="price center-align">
-                            <h4>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h4>
+                            <h5>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h5>
                         </div>
 
                         <a class="btn waves-effect waves-light secondary-color"
@@ -35,11 +35,11 @@
                 </div>
                 <div class="col l4 s12">
                     <div class="card-title accent-color">
-                        <h3 translate="pricing.offers.standard.title"></h3>
+                        <h4 translate="pricing.offers.standard.title"></h4>
                     </div>
                     <div class="card-content light-primary-color">
                         <div class="price center-align">
-                            <h4>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h4>
+                            <h5>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h5>
                         </div>
 
                         <a class="btn waves-effect waves-light accent-color"
@@ -57,11 +57,11 @@
                 </div>
                 <div class="col l4 s12">
                     <div class="card-title dark-primary-color">
-                        <h3 translate="pricing.offers.standard.title"></h3>
+                        <h4 translate="pricing.offers.standard.title"></h4>
                     </div>
                     <div class="card-content light-primary-color">
                         <div class="price center-align">
-                            <h4>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h4>
+                            <h5>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}}</h5>
                         </div>
 
                         <a class="btn waves-effect waves-light dark-primary-color"
@@ -77,8 +77,11 @@
                         </ul>
                     </div>
                 </div>
+                <div class="col s12">
+                    <p class="center-align primary-text-color" translate="pricing.team-subscribe"></p>
+                </div>
             </div>
-            <p class="center-align primary-text-color" translate="pricing.team-subscribe"></p>
+            
         </div>
     </div>
 
