--- a/src/app/index.css
+++ b/src/app/index.css
@@ -86,23 +86,18 @@
     min-height: 170px
 }
 
-.aboutUs .card {
-    border-radius: 8px;
-}
 
 .aboutUs .card-transluscent {
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(96,125,139, 0.5);
     padding: 20px;
-    margin: 25px;
+    margin: 3vh 15vw 3vh 15vw;
+    text-align: center;
+    color:#ffffff;
 }
 
 .aboutUs-part-two {
     text-align: left;
-    width: 80%;
     position: relative;
-    box-sizing: border-box;
-    border-radius: 8px;
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.23);
     padding: 3vh 7vw 3vh 7vw;
     background: rgba(255, 255, 255, 0.1) !important;
 }
@@ -120,17 +115,18 @@
     padding: 5vh 10vw 10vh 10vw;
     text-align: center;
     position: relative;
-    background: url("../assets/images/handball/Home2.jpg") fixed center 60%;
+    background: url("../assets/images/handball/Pricing.jpg") fixed center 60%;
     background-size: cover;
 }
 
 .pricing {
-    background: url("../assets/images/handball/Back01.jpg");
-    max-height: 100vh;
+    background: url("../assets/images/handball/Pricing.jpg") fixed center 40%;
+    max-height: 100%;
+    height: 100%;
     width: 100%;
-    height: 400px;
-    padding: 5vh 10vw 10vh 10vw;
+    padding: 5vh 10vw 5vh 10vw;
     text-align: center;
+    background-size: cover;
     position: relative;
 }
 
@@ -167,7 +163,7 @@
     height: 100%;
     width: 100%;
     text-align: center;
-    background: url("../assets/images/handball/Back02.jpeg") fixed;
+    background: url("../assets/images/handball/Pricing.jpg") fixed;
     background-size: cover;
     position: relative;
     top: 0;
@@ -175,16 +171,6 @@
     margin: 0;
     padding: 0;
 
-}
-
-.aboutUs .about-container {
-    width: 80%;
-    background-color: transparent;
-    position: relative;
-    height: auto;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 80px;
 }
 
 /* Override Materializecss */
