--- a/src/app/modules/commons/users/billing/pay.html
+++ b/src/app/modules/commons/users/billing/pay.html
@@ -1,10 +1,8 @@
 <div id="frame" ng-show="modalClosed"></div>
 <div class="row" ng-if="payError">
     <h6 translate="profile.label.pay-error"></h6>
-    <a href="" class="white-text waves-effect waves-light"
-       ng-click="doTheBack()">
-        <i class="fa fa-arrow-left"></i>
-    </a>
+    <button class="btn accent-color right" ng-click="doTheBack()"
+                    translate="commons.buttons.back"></button>
 </div>
 <!-- Modal Structure -->
 <div id=payMessageModal class="modal">
@@ -13,7 +11,7 @@
         <p translate="profile.label.pay-modal"></p>
     </div>
     <div class="modal-footer">
-        <a href="javascript:void(0);" class="modal-action modal-close waves-effect waves-red btn btn-s red" ng-click="cancel()" translate="commons.buttons.cancel"></a>
-        <a href="javascript:void(0);" class="btn btn-s waves-effect waves-red  green darken-1" ng-click="agree()"  translate="commons.buttons.agree"></a>
+        <a href="javascript:void(0);" class="modal-action modal-close waves-effect waves-red btn light-primary-color" ng-click="cancel()" translate="commons.buttons.cancel"></a>
+        <a href="javascript:void(0);" class="btn waves-effect waves-red  accent-color" ng-click="agree()"  translate="commons.buttons.agree"></a>
     </div>
 </div>
