--- a/src/app/modules/public/aboutUs.html
+++ b/src/app/modules/public/aboutUs.html
@@ -1,27 +1,27 @@
-<div class="primary-text-color">
-    <div class="row aboutUs">
+<div class="primary-text-color aboutUs">
+    <div class="row">
         <div class="about-title col s12">
             <h2 class="center-align white-text" translate="landing.contact.about"></h2>
         </div>
-        <div class="col s12">            
-            <div class="card card-transluscent">
-                <div class="card-content">
-                    <h4 class="accent-text-color">Notre philosophie</h4>
-                    <p>&nbsp;</p>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                        euismod tincidunt ut laoreet dolore magna. Lorem ipsum dolor sit amet, consectetuer
-                        adipiscing elit,
-                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna. Lorem ipsum dolor sit
-                        amet,
-                        consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                        magna.
-                    </p>
-                    <p>&nbsp;</p>
-                </div>
-            </div>
-        </div>
         <div class="col s12 aboutUs-part-two">
             <div class="row">
+                <div class="col s12">
+                    <div class="card card-transluscent">
+                        <div class="card-content ">
+                            <h4>Notre philosophie</h4>
+                            <p>&nbsp;</p>
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                                euismod tincidunt ut laoreet dolore magna. Lorem ipsum dolor sit amet, consectetuer
+                                adipiscing elit,
+                                sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna. Lorem ipsum dolor sit
+                                amet,
+                                consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                                magna.
+                            </p>
+                            <p>&nbsp;</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="col l2 hide-on-med-and-down">&nbsp;</div>
                 <div class="col s12 m6 l4">
                     <div class="card horizontal">
