--- a/src/app/modules/sandbox/agenda/compare.html
+++ b/src/app/modules/sandbox/agenda/compare.html
@@ -7,9 +7,9 @@
         <div class="col s12">
 
             <!-- Header-->
-            <div class="row cardPlayer">
-                <div class="col l3 m3 center hide-on-small-only">
-                    &nbsp;
+            <div class="row dark-primary-color valign-wrapper">
+                <div class="col s10">
+                    <h5>&nbsp;</h5>
                     <div ng-if="loading">
                         <div class="preloader-wrapper small active ">
                             <div class="spinner-layer spinner-blue-only">
@@ -26,20 +26,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="col l7 m7 s12 white-text center">&nbsp;</div>
-                <div class="col l2 m2 s12 white-text center">
-                    <h5>
-                        <a href="" class="black-text waves-effect waves-light" ng-click="doTheBack()">
-                            <i class="fa fa-arrow-left"></i>
-                        </a>
-                    </h5>
+
+                <div class="col s2">
+                    <button class="btn accent-color right" ng-click="doTheBack()" translate="commons.buttons.back"></button>
                 </div>
-
-                <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive"
-                                 meta="meta"></filter-calendar>
             </div>
+            
+            <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
 
-            <div class="row">
+            <div class="row primary-text-color">
                 <table>
                     <thead>
                     <tr>
@@ -52,9 +47,7 @@
                     <tbody>
                     <tr>
                         <td><b>Buts</b></td>
-                        <td ng-repeat="p in events track by $index" class="center-align"><h3
-                                class="light-blue-text text-darken-1">
-                            {{stats.goals[p._id] || 0}}</h3>
+                        <td ng-repeat="p in events track by $index" class="center-align"><h3> {{stats.goals[p._id] || 0}}</h3>
                             <p ng-if="(stats.originShoot[p._id]||0)>0">{{ (stats.goals[p._id] || 0) *100 /
                                 stats.originShoot[p._id] | number : 2}} %</p>
                             <p ng-if="(stats.originShoot[p._id]||0)==0">na</p>
@@ -63,7 +56,7 @@
                     <tr>
                         <td><b>Sanctions</b></td>
                         <td ng-repeat="p in events track by $index" data-field="{{p._id}}" class="center-align">
-                            <h3 class="red-text text-darken-1">{{stats.sanctions[p._id] || 0}}</h3></td>
+                            <h3 class="accent-text-color">{{stats.sanctions[p._id] || 0}}</h3></td>
                     </tr>
                     </tbody>
                 </table>
