--- a/src/app/modules/sandbox/effective/players/compare.html
+++ b/src/app/modules/sandbox/effective/players/compare.html
@@ -7,9 +7,9 @@
         <div class="col s12">
 
             <!-- Header-->
-            <div class="row cardPlayer">
-                <div class="col l3 m3 center hide-on-small-only">
-                    &nbsp;
+            <div class="row dark-primary-color valign-wrapper">
+                <div class="col s10">
+                    <h5>&nbsp;</h5>
                     <div ng-if="loading">
                         <div class="preloader-wrapper small active ">
                             <div class="spinner-layer spinner-blue-only">
@@ -26,22 +26,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="col l7 m7 s12 white-text center">
-                    &nbsp;
-                </div>
-                <div class="col l2 m2 s12 white-text center">
-                    <h5>
-                        <a href="" class="black-text waves-effect waves-light" ng-click="doTheBack()">
-                            <i class="fa fa-arrow-left"></i>
-                        </a>
-                    </h5>
-                </div>
 
-                <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive"
-                                 meta="meta"></filter-calendar>
+                <div class="col s2">
+                    <button class="btn accent-color right" ng-click="doTheBack()"
+                            translate="commons.buttons.back"></button>
+                </div>
             </div>
 
-            <div class="row">
+            <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive"
+                             meta="meta"></filter-calendar>
+
+            <div class="row primary-text-color">
                 <table>
                     <thead>
                     <tr>
@@ -65,34 +60,42 @@
                     <tr>
                         <td><b>Sanctions</b></td>
                         <td ng-repeat="p in players track by $index" data-field="{{p._id}}" class="center-align">
-                            <h3 class="red-text text-darken-1">{{stats.sanctions[p._id] || 0}}</h3></td>
+                            <h3 class="accent-text-color">{{stats.sanctions[p._id] || 0}}</h3></td>
                     </tr>
                     </tbody>
                 </table>
                 <div class="row">
                     <div class="col s12 m6">
-                        <qaobee-radar-chart title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.positive' | translate}}" owners="playersIds" series="series"
-                                            start-date="periodicityActive.startDate" meta="meta"
-                                            end-date="periodicityActive.endDate"
-                                            indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
+                        <qaobee-radar-chart
+                                title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.positive' | translate}}"
+                                owners="playersIds" series="series"
+                                start-date="periodicityActive.startDate" meta="meta"
+                                end-date="periodicityActive.endDate"
+                                indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
-                        <qaobee-radar-chart title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.negative' | translate}}" owners="playersIds" series="series"
-                                            start-date="periodicityActive.startDate" meta="meta"
-                                            end-date="periodicityActive.endDate"
-                                            indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
+                        <qaobee-radar-chart
+                                title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.negative' | translate}}"
+                                owners="playersIds" series="series"
+                                start-date="periodicityActive.startDate" meta="meta"
+                                end-date="periodicityActive.endDate"
+                                indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
-                        <qaobee-radar-chart title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.positive' | translate}}" owners="playersIds" series="series"
-                                            start-date="periodicityActive.startDate" meta="meta"
-                                            end-date="periodicityActive.endDate"
-                                            indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
+                        <qaobee-radar-chart
+                                title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.positive' | translate}}"
+                                owners="playersIds" series="series"
+                                start-date="periodicityActive.startDate" meta="meta"
+                                end-date="periodicityActive.endDate"
+                                indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
-                        <qaobee-radar-chart title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.negative' | translate}}" owners="playersIds" series="series"
-                                            start-date="periodicityActive.startDate" meta="meta"
-                                            end-date="periodicityActive.endDate"
-                                            indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
+                        <qaobee-radar-chart
+                                title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.negative' | translate}}"
+                                owners="playersIds" series="series"
+                                start-date="periodicityActive.startDate" meta="meta"
+                                end-date="periodicityActive.endDate"
+                                indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
                     </div>
                 </div>
             </div>
