--- a/src/app/modules/public/aboutUs.html
+++ b/src/app/modules/public/aboutUs.html
@@ -74,8 +74,8 @@
                                 <h5 class="dark-text-color">Le coach</h5>
                                 <span class="light-text-color hide-on-med-and-down">les gars, mise au vert ce week end...</span>
                                 <p>&nbsp;</p>
-                                <p class="hide-on-med-and-down"><img src="../../../assets/images/Pascal.jpg" style="width:200px; height:200px;"></p>
-                                <p class="hide-on-large-only"><img src="../../../assets/images/Pascal.jpg" style="width:100px; height:100px;"></p>
+                                <p class="hide-on-med-and-down"><img src="../../../assets/images/Pascal.JPG" style="width:200px; height:200px;"></p>
+                                <p class="hide-on-large-only"><img src="../../../assets/images/Pascal.JPG" style="width:100px; height:100px;"></p>
                                 <div class="divider"></div>
                             </div>
                             <div class="card-content accent-text-color hide-on-med-and-down">
@@ -228,8 +228,8 @@
                                 <h5 class="dark-text-color">Le préparateur mental</h5>
                                 <span class="light-text-color hide-on-med-and-down">Allez les gars, on leur marche sur la tête...</span>
                                 <p>&nbsp;</p>
-                                <p class="hide-on-med-and-down"><img src="../../../assets/images/Jerome.jpg" style="width:200px; height:200px;"></p>
-                                <p class="hide-on-large-only"><img src="../../../assets/images/Jerome.jpg" style="width:100px; height:100px;"></p>
+                                <p class="hide-on-med-and-down"><img src="../../../assets/images/Jerome.JPG" style="width:200px; height:200px;"></p>
+                                <p class="hide-on-large-only"><img src="../../../assets/images/Jerome.JPG" style="width:100px; height:100px;"></p>
                                 <div class="divider"></div>
                             </div>
                             <div class="card-content accent-text-color hide-on-med-and-down">
